<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFD">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/grey_rounded_rectangle">
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:padding="13dp"
            android:background="@drawable/white_rounded_rectangle"
            android:hint="@string/username_hint"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            android:hint="@string/password_hint"
            android:background="@drawable/white_rounded_rectangle"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login_button"
            android:clickable="true"
            android:onClick="loginClicked"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_rounded_rectangle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:onClick="lostPasswordClicked"
                android:text="@string/lost_password_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:onClick="newUserClicked"
                android:text="@string/new_user"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_banner"
        android:contentDescription="@string/none" />
</LinearLayout>