<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables"
    tools:context="com.startupclubs.scdd16.EventDescriptionActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="Event Description"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/grey_rounded_rectangle">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:src="@drawable/demo_day_logo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/none"/>
        <TextView
            android:id="@+id/event_description_title"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#3d3d3d"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="agendaClicked">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/agenda_icon"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/agenda_text"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="venueClicked">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/venue_logo"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/venue_text"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="speakersClicked">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/speakers_icon"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/speakers_text"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="stallsClicked">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stalls_icon"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stalls_text"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="sponsorsClicked">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sponsors_icon"
                android:adjustViewBounds="true"
                android:contentDescription="@string/none"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sponsors_and_partners_text"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            tools:ignore="UselessLeaf" />
    </LinearLayout>
</LinearLayout>